Adding Data. Committing changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="quiz"></div>
     <div id="results"></div>
     
-    <start.addEventListener("click", startQuiz);></start.addEventListener>
+    <start.addEventListener("click",startQuiz);></start.addEventListener>
     <script src="script.js"></script>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -35,11 +35,17 @@
       
     <header>
         <h1>Coding Quiz - Javascript</h1>
+        <p id = message><p> Welcome to my coding quiz! You will be asked a series of questions about Javascript.
+          <br>Your responses will be timed. 
+          <br>Answers as many questions as you can, as quickly as you can and compare your results.  
+          <br>Click Start to begin.
+          <br>
+          <br>!GOOD LUCK!</p> 
     </header>  
 <div class = "page-one">
-<p id = message>Welcome to my coding quiz! You will be asked a series of questions about Javascript. Your responses will be timed. Answers as many questions as you can, as quickly as you can and compare your results.  Click Start to begin.</p>    
+   
     <p id = gameQuestion></p>
-    <button id = "startQuiz" >Start</button>
+    <button id = "startQuiz">Start</button>
 </div>
 
     <div id = "game-screen">
