--- a/results.html
+++ b/results.html
@@ -12,21 +12,17 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Code Quiz - Start over</a>
           
-          </button>
           <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Go back</a>
-              </li>
-            </ul>
             <span class="navbar-text2">
-             Here are your results.
+             Results:
             </span>
           </div>
         </div>
       </nav>
 
 <main>
+
+  
     <div id="submition">
       <p id=  final></p> 
         <form>
